--- a/homework-4/1871/task1/package.json
+++ b/homework-4/1871/task1/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:viem": "esno src/viem.ts"
+    "dev:viem": "esno src/viem.ts",
+    "dev:ethers": "esno src/ethers.ts"
   },
   "keywords": [],
   "author": "",
