interact with link contract using viem

--- a/homework-4/1901/task1/.env.example
+++ b/homework-4/1901/task1/.env.example
@@ -1,5 +1,5 @@
-# 以太坊主网 RPC 地址（建议使用 Alchemy、Infura、或自建节点）
-RPC_URL=https://eth-mainnet.g.alchemy.com/v2/your-alchemy-api-key
+# .env.example
+ALCHEMY_KEY=your-alchemy-api-key-here
 
 # 如果你需要发起交易（如 transfer），则需解锁钱包
 PRIVATE_KEY=your-private-key-here
