--- a/homework-4/1901/task1/package.json
+++ b/homework-4/1901/task1/package.json
@@ -12,7 +12,8 @@
   "packageManager": "pnpm@10.8.0",
   "dependencies": {
     "dotenv": "^16.5.0",
-    "ethers": "^6.13.7"
+    "ethers": "^6.13.7",
+    "viem": "^2.28.3"
   },
   "devDependencies": {
     "@types/node": "^22.15.3",
